--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -59,4 +59,13 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  background-color: #f0f0f0;
+  max-width: 100vw;
+  min-height: 100vh;
 }
