--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -42,6 +42,7 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             padding: 10px;
             list-style-type: none;
+            z-index: 1000;
 
             li {
                 padding: 5px 10px;
